--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ALARMMATH</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_math_me_awake_math">ALARMMATH</string>
-    <string name="answer">ANSWER: </string>
+    <string name="application_name">ALARMMATH</string>
+    <string name="settings">Settings</string>
+    <string name="AlarmMath">ALARMMATH</string>
+    <string name="Answer">ANSWER: </string>
     <string name="zero">0</string>
     <string name="one">1</string>
     <string name="two">2</string>
